--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <script src="src/js/product.js" defer></script>
   </head>
 
   <body>
@@ -62,7 +63,7 @@
 
       <section class="products">
         <h2>Top Products</h2>
-        <ul class="product-list">
+        <ul id="tent-list" class="product-list">
           <li class="product-card">
             <a href="product_pages/marmot-ajax-3.html">
               <img
