--- a/src/external.html
+++ b/src/external.html
@@ -4,34 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explore SleepOutside & Sleepopolis</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-            padding: 20px;
-            background-color: #f4f4f4;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .button {
-            display: inline-block;
-            margin: 15px;
-            padding: 10px 20px;
-            background-color: #0073e6;
-            color: white;
-            font-weight: bold;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .button:hover {
-            background-color: #005bb5;
-        }
-    </style>
+    <link rel="stylesheet" href="css/external.css" />
+   
 </head>
 <body>
 
