--- a/personal/thankyou.html
+++ b/personal/thankyou.html
@@ -10,7 +10,10 @@
     <div class="thank-you-container">
         <h1>Thank You!</h1>
         <p>Your form has been submitted successfully.We aprreciate your time and effort in providing the information.</p>
-        <a href="join.html" class="btn">Return to Home</a>
+          <div class="return-home">
+      <a href="index.html" class="home-button">← Return Home</a>
     </div>
+    </div>
+   
 </body>
 </html>
