--- a/personal/index.html
+++ b/personal/index.html
@@ -24,8 +24,8 @@
 <body>
     <header>
         <div class="top-nav">
-            <button>Login</button>
-            <button>Email</button>
+           <a href="login.html" class="login-btn">Login</a>
+           
         </div>
         <nav class="navbar">
             <button class="hamburger-menu" aria-label="Toggle navigation">
