--- a/personal/program.html
+++ b/personal/program.html
@@ -41,11 +41,23 @@
   </main>
 
   <footer class="program-footer">
-    <p>&copy; <span id="year"></span> Vancouver Paradise • Program Page by Angel</p>
+    <p>©️copy <span id="year"></span>  😊 Evangelis Albesa WDD 330😊 Vancouver Paradise,Canada. All right reserved</p>
+        <p>Last Modified: <span id="last-modified"></span></p>
   </footer>
 
   <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
+     document.getElementById("year").textContent = new Date ().getFullYear();
+
+document.getElementById("last-modified").textContent = document.lastModified;
+
+ 
+ // Output the current year in the footer's first paragraph
+  const currentYear = new Date().getFullYear();
+  document.getElementById("currentyear").textContent = currentYear;
+  
+  // Output the date the document was last modified in the footer's second paragraph
+  const lastModified = document.lastModified;
+  document.getElementById("lastModified").textContent = "Last Modification: " + lastModified;
   </script>
 </body>
 </html>
