--- a/personal/events.html
+++ b/personal/events.html
@@ -15,33 +15,71 @@
   </header>
 
   <main class="events-container">
-    <section class="event-card">
-      <h2>🧘‍♀️ Seawall Sunrise Yoga</h2>
-      <p class="event-date">August 10, 2025 • Stanley Park</p>
-      <p>
-        Greet the morning sun with gentle yoga along the scenic seawall. Free mats provided. All experience levels welcome!
-      </p>
-    </section>
 
-    <section class="event-card">
-      <h2>🎨 Culture Crawl in Gastown</h2>
-      <p class="event-date">August 15–18, 2025 • Gastown Art District</p>
-      <p>
-        Explore local galleries, meet artists, and experience live performances across Vancouver’s historic art neighborhood.
-      </p>
-    </section>
+   <section class="-----">
+  <h2>
+    🧘‍♀️ <a href="https://vancouver.ca/parks-recreation-culture/stanley-park-seawall.aspx" target="_blank">
+      Seawall Sunrise Yoga
+    </a>
+  </h2>
+  <p class="event-date">August 10, 2025 • Stanley Park</p>
+  <p>
+    Greet the morning sun with gentle yoga along the scenic seawall. Free mats provided. All experience levels welcome!
+  </p>
+</section>
 
-    <section class="event-card">
-      <h2>🌲 Eco Hike & Forest Picnic</h2>
-      <p class="event-date">August 24, 2025 • Capilano River Trail</p>
-      <p>
-        Join a guided nature walk focused on local ecology, ending with a sustainable lunch in the red cedar groves.
-      </p>
-    </section>
+<section class="event-card">
+  <h2>
+    🎨 <a href="https://culturecrawl.ca/" target="_blank">
+      Culture Crawl in Gastown
+    </a>
+  </h2>
+  <p class="event-date">August 15–18, 2025 • Gastown Art District</p>
+  <p>
+    Explore local galleries, meet artists, and experience live performances across Vancouver’s historic art neighborhood.
+  </p>
+</section>
 
-    <div class="return-home">
+<section class="event-card">
+  <h2>
+    🌲 <a href="https://naturevancouver.ca/events/hike-along-capilano-pacific-trail-2/" target="_blank">
+      Eco Hike & Forest Picnic
+    </a>
+  </h2>
+  <p class="event-date">August 24, 2025 • Capilano River Trail</p>
+  <p>
+    Join a guided nature walk focused on local ecology, ending with a sustainable lunch in the red cedar groves.
+  </p>
+</section>
+
+<section class="event-card">
+  <h2>
+    🥁 <a href="https://stanleyparkvan.com/stanley-park-van-event-brahms-tams-drum-circle.html" target="_blank">
+      Sunset Drum Circle at English Bay
+    </a>
+  </h2>
+  <p class="event-date">September 1, 2025 • English Bay Beach</p>
+  <p>
+    Wind down your week with rhythmic beats by the ocean. Bring your own drum or join in with hand percussion provided by local facilitators.
+  </p>
+</section>
+
+<section class="event-card">
+  <h2>
+    🎬 <a href="https://vancouversbestplaces.com/entertainment/summer-outdoor-movies/waterfront-cinema-at-canada-place/" target="_blank">
+      Waterfront Cinema Nights
+    </a>
+  </h2>
+  <p class="event-date">September 7–10, 2025 • Canada Place Plaza</p>
+  <p>
+    Enjoy iconic films under the stars with skyline views. Popcorn stands, cozy seating, and themed movie nights—from family flicks to indie gems.
+  </p>
+</section>
+
+  <div class="return-home">
   <a href="index.html" class="home-button">← Return Home</a>
 </div>
+
 
   </main>
 
