--- a/personal/index.html
+++ b/personal/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
    
-    <link rel="stylesheet" href="styles/personalbase.cs">
+    <link rel="stylesheet" href="styles/program.css">
     <link rel="stylesheet" href="styles/personalbase.css">
     <script src="scripts/personal.js" defer></script>
     <script src="scripts/api.js" defer></script>
@@ -38,8 +38,8 @@
                 <li><a href="index.html">About Us</a></li>
                 <li><a href="events.html">Events</a></li>
                 <li><a href="greenkind.html">Green and Kind</a></li>
-                <li><a href="#">Program</a></li>
-                <li><a href="#">Resources</a></li>
+                <li><a href="program.html">Program</a></li>
+                <li><a href="resources.html">Resources</a></li>
             </ul>
         </nav>
     </header>
