--- a/personal/login.html
+++ b/personal/login.html
@@ -27,17 +27,26 @@
   </main>
 
   <script>
-    function handleLogin(e) {
-      e.preventDefault();
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      if (email && password) {
-        alert("Welcome back, " + email + "!");
-        // You could redirect or set session storage here
-      } else {
-        alert("Please enter valid credentials.");
-      }
-    }
+   function handleLogin(e) {
+  e.preventDefault();
+
+  const email = document.getElementById("email").value;
+  const password = document.getElementById("password").value;
+
+  if (email && password) {
+    const name = email.split("@")[0];
+
+    // Save to localStorage
+    localStorage.setItem("username", name);
+    localStorage.setItem("userEmail", email);
+    localStorage.setItem("userPassword", password); // 👈 For demo use ONLY
+
+    alert("Welcome back, " + name + "!");
+    window.location.href = "index.html";
+  } else {
+    alert("Please enter both email and password.");
+  }
+}
   </script>
 </body>
 </html>
